# 2025_Spring_UCAS_CPLab

./: .gitignore  2025_Spring_UCAS_CPLab.code-workspace  README.md
cact/: .gitignore  CMakeLists.txt  README.md  run_test.sh  runtime.c  test_functional.sh  test_ir.sh
cact/grammar/: CACT.g4  CactLexer.cpp  CactLexer.g4  CactLexer.h  CactLexer.interp  CactLexer.tokens  CactParser.cpp  CactParser.g4  CactParser.h  CactParser.interp  CactParserBaseVisitor.cpp  CactParserBaseVisitor.h  CactParserVisitor.cpp  CactParserVisitor.h
cact/grammar/.antlr/: CactLexer.interp  CactLexer.java  CactLexer.tokens  CactParser.interp  CactParser.java  HelloLexer.java  HelloParser.java
cact/libcact/: lib.c
cact/src/: IR.cpp  IRGenerator.cpp  IRGenerator.cpp.backup  IRGenerator_old.cpp  SemanticAnalyzer.cpp  SymbolTable.cpp  main.cpp  riscv.cpp  semanticAnalysis.cpp  symbolTable.h  syntax_error_listener.cpp
cact/src/include/: IRGenerator.h  SemanticAnalyzer.h  SymbolTable.h  syntax_error_listener.h
cact/test/: functional_31_no_opt.ll  functional_32_clean.ll  functional_32_debug.ll  functional_32_fixed.ll  temp_31_debug.ll  temp_31_debug_new.ll  temp_32_debug.ll
cact/test/samples_generateIR/functional/: 23.cact  28.cact  31.cact
cact/test/samples_generateIR/runtime_lib/: runtime.ll
cact/test/samples_generateIR/test_cases/functional/: 18.cact  27.cact  30.cact
cact/test/samples_generateIR/test_results/: functional_00.ll  functional_00_linked.ll  functional_01.ll  functional_01_linked.ll  functional_02.ll  functional_02_linked.ll  functional_03.ll  functional_03_linked.ll  functional_04.ll  functional_04_linked.ll  functional_05.ll  functional_05_linked.ll  functional_06.ll  functional_06_linked.ll  functional_07.ll  functional_07_linked.ll  functional_08.ll  functional_08_linked.ll  functional_09.ll  functional_09_linked.ll  functional_10.ll  functional_10_linked.ll  functional_11.ll  functional_11_linked.ll  functional_12.ll  functional_12_linked.ll  functional_13.ll  functional_13_linked.ll  functional_14.ll  functional_14_linked.ll  functional_15.ll  functional_15_linked.ll  functional_16.ll  functional_16_linked.ll  functional_17.ll  functional_17_linked.ll  functional_18.ll  functional_18_linked.ll  functional_19.ll  functional_19_linked.ll  (+36 more)
(+4 files in other folders)
